--- a/index_calculadora.html
+++ b/index_calculadora.html
@@ -12,8 +12,8 @@
         <div class="tela">123</div>
         <table>
             <tr>
-                <td><button onclick="clean('C')">C</button></td>
-                <td><button><</button></td>
+                <td><button onclick="clean()">C</button></td>
+                <td><button onclick="back()"><</button></td>
                 <td><button onclick="inserir('/')">/</button></td>
                 <td><button onclick="inserir('*')">X</button></td>
             </tr>
