--- a/index_calculadora.html
+++ b/index_calculadora.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
         <h1>Caculadora</h1>
-        <div class="tela">123</div>
+        <div class="tela">0</div>
         <table>
             <tr>
                 <td><button onclick="clean()">C</button></td>
@@ -33,7 +33,7 @@
                 <td><button onclick="inserir('1')">1</button></td>
                 <td><button onclick="inserir('2')">2</button></td>
                 <td><button onclick="inserir('3')">3</button></td>
-                <td rowspan="2"><button style="height: 102px; background: #ff4d01;">=</button></td>
+                <td rowspan="2"><button style="height: 102px; background: #ff4d01;" onclick="somar()">=</button></td>
             </tr>
             <tr>
                 <td colspan="2"><button style="width: 102px;" onclick="inserir('0')">0</button></td>
