--- a/index_calculadora.html
+++ b/index_calculadora.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <h1>Caculadora</h1>
+        <h1>Calculadora</h1>
         <div class="tela">0</div>
         <table>
             <tr>
